--- a/Day001-Login-Form/index.html
+++ b/Day001-Login-Form/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Day01-Login-Form</title>
-	<link rel="stylesheet" type="text/css" href="../assets/css/neat.css">
+	<link rel="stylesheet" type="text/css" href="css/neat.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
